# calculator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
src/qml/: HomePage.qml  main.qml
